--- a/index.html
+++ b/index.html
@@ -2171,7 +2171,7 @@ var sbiajaxurl = "https://atividadesdepedagogia.com.br/wp-admin/admin-ajax.php";
                                         document.addEventListener( event, lazyloadRunObserver );
                                 } );
                         </script>
-                        <noscript><img height="1" width="1" style="display: none;" src="https://www.facebook.com/tr?id=390343160410762&ev=PageView&noscript=1&cd%5Bpage_title%5D=COP+30&cd%5Bpost_type%5D=page&cd%5Bpost_id%5D=4442&cd%5Bplugin%5D=PixelYourSite&cd%5Buser_role%5D=guest&cd%5Bevent_url%5D=atividadesdepedagogia.com.br%2Fcop-30%2F" alt=""></noscript>
+                        <noscript><img height="1" width="1" style="display: none;" src="
         <script type="rocketlazyloadscript">
                 (function () {
                         var c = document.body.className;
@@ -2690,5 +2690,6 @@ if (document.readyState === 'loading') {
 
 
 <!-- This website is like a Rocket, isn't it? Performance optimized by WP Rocket. Learn more: https://wp-rocket.me - Debug: cached@1762783791 -->
+
 
 
